Update: updated the application.properties with the DB, username, password

--- a/SpringMVCTutadvisor/src/main/resources/application.properties
+++ b/SpringMVCTutadvisor/src/main/resources/application.properties
@@ -12,8 +12,8 @@ server.port=8083
 #### MYSQL DATASOURCE ####
 ##### Configure to match your Database
 spring.datasource.url=jdbc:mysql://localhost:3306/tutadvisor?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=MST
-spring.datasource.username=student
-spring.datasource.password=student
+spring.datasource.username=tutadvisor
+spring.datasource.password=tutword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
