--- a/SpringMVCTutadvisor/src/main/resources/application.properties
+++ b/SpringMVCTutadvisor/src/main/resources/application.properties
@@ -11,8 +11,8 @@ server.port=8083
 
 #### MYSQL DATASOURCE ####
 ##### Configure to match your Database
-spring.datasource.url=jdbc:mysql://localhost:3306/tutadvisor?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=MST
-spring.datasource.username=tutadvisor
+spring.datasource.url=jdbc:mysql://localhost:3306/tutadvisordb?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=MST
+spring.datasource.username=tutuser
 spring.datasource.password=tutword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
